Turn on compact object headers